<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arc_star</name>
  <version>1.0.0</version>
  <description>The Arc* Detector ROS package</description>

  <maintainer email="ialzugaray@mavt.ethz.ch">Ignacio Alzugaray</maintainer>
  <license>MIT</license>

  <!-- ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">dvs_msgs</depend>

  <!-- ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- ROS1/ROS2 dependencies -->
  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>